--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,15 @@ body{
     align-items: center;
     flex-direction: column;
 }
+.explain-for-mobile{
+    display: none;
+    font-size: 1.5rem;
+    margin: 5px 0;
+    width: 300px;
+}
 textarea{
-    margin: 20px;
+    display:none;
+    margin-top: 10px;
     border-radius: 180px;
     width:50px;
     text-align: center;
