--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body{
     margin: 5px 0;
     width: 300px;
 }
-textarea{
+input{
     display:none;
     margin-top: 10px;
     border-radius: 180px;
